oci/headplane/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headplane
  annotations:
    linkerd.io/inject: enabled
